# ShieldNode

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  reproducible-build.yml
circuits/bandwidth_receipt/: README.md  circuit.circom
circuits/lib/: merkle.circom
circuits/node_eligibility/: README.md  circuit.circom
circuits/scripts/: compile.sh  prove.sh  setup.sh  verify.sh
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: aead.rs  chain.rs  circuit.rs  config.rs  cover_traffic.rs  health_monitor.rs  hop_codec.rs  kex.rs  kill_switch.rs  lib.rs  main.rs  receipts.rs  reputation.rs  settlement.rs  sphinx.rs  tun.rs  tun_loop.rs  tunnel.rs  wallet.rs  wallet_bridge.rs  watchlist.rs  zk_merkle.rs  zk_prove.rs  zk_witness.rs
client/src-tauri/tests/: anti_griefing.rs
client/src/components/: CircuitMap.tsx  ConnectToggle.tsx  GasMonitor.tsx  NodeBrowser.tsx  SessionCost.tsx  Settings.tsx
client/src/hooks/: useCircuit.ts  useGas.ts  useNodes.ts  useSession.ts  useWallet.ts
client/src/lib/: contracts.ts  eip712.ts  scoring.ts  types.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/scripts/: gen-test-keys.js
contracts/src/: ChallengeManager.sol  CommitmentTree.sol  EligibilityVerifier.sol  ExecutionTraceVerifier.sol  Groth16Verifier.sol  NoLogVerifier.sol  NodeRegistry.sol  RelayProofVerifier.sol  SessionSettlement.sol  SlashingOracle.sol  Treasury.sol  ZKSettlement.sol
contracts/src/interfaces/: INodeRegistry.sol  ISessionSettlement.sol  ISlashingOracle.sol
contracts/src/lib/: EIP712Utils.sol
contracts/test/: ChallengeManager.t.sol  CommitmentTree.t.sol  EligibilityVerifier.t.sol  ExecutionTraceVerifier.t.sol  NodeRegistry.t.sol  RelayProofVerifier.t.sol  SessionSettlement.t.sol  SlashingOracle.t.sol  StressTest.t.sol  ZKSettlement.t.sol  ZKSettlementPipeline.t.sol
contracts/test/fork/: EndToEnd.fork.t.sol
contracts/test/fuzz/: SessionSettlement.fuzz.t.sol  SlashingOracle.fuzz.t.sol
contracts/test/halmos/: SessionSettlement.halmos.t.sol  SlashingOracle.halmos.t.sol
contracts/test/helpers/: TestKeys.sol
contracts/test/integration/: EndToEnd.t.sol
contracts/test/invariant/: CrossContract.invariant.t.sol  SessionSettlement.invariant.t.sol  SlashingOracle.invariant.t.sol
docs/: IMPLEMENTATION-PLAN-2026-04-09.md  IMPLEMENTATION-PLAN-2026-04-10.md  OPERATOR-GUIDE.md  OPERATOR-SECURITY.md  OWNERSHIP-RENOUNCEMENT.md  PROJECT-REVIEW-2026-04-09.md  PROJECT-REVIEW-2026-04-10.md  TECH-DEBT.md  THREAT-MODEL.md  ZK-CIRCUIT-REVIEW.md  anti-logging-research.md  shieldnode-funding-options.md
node/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.reproducible  config.toml  docker-compose.yml
node/scripts/: verify-build.sh
node/src/: config.rs  main.rs
node/src/crypto/: aead.rs  chacha20.rs  ecdsa.rs  hybrid.rs  kdf.rs  keys.rs  mldsa.rs  mlkem.rs  mod.rs  noise.rs  ratchet.rs  sphinx.rs  traits.rs  x25519_kem.rs
node/src/metrics/: api.rs  bandwidth.rs  compliance.rs  mod.rs  traffic_analysis.rs
node/src/network/: attestation.rs  batch_reorder.rs  chain.rs  challenge.rs  control_msg.rs  discovery.rs  eip712.rs  heartbeat.rs  hop_codec.rs  link_padding.rs  mod.rs  nat.rs  nat_table.rs  receipts.rs  relay.rs  relay_listener.rs
node/src/tunnel/: circuit.rs  listener.rs  mod.rs  packet_norm.rs  tun_device.rs  wireguard.rs
tests/integration/: smoke.sh
zkvm/: Cargo.toml  Dockerfile  Dockerfile.cuda  README.md
zkvm/guest/: Cargo.toml
zkvm/guest/src/: compliance.rs  main.rs  trace.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/: Cargo.toml
zkvm/scripts/: build.sh
