[package]
name = "shieldnode"
version = "0.1.0"
edition = "2021"

[dependencies]
shieldnode-types = { path = "../packages/shieldnode-types" }
boringtun = "0.7"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
libp2p = { version = "0.54", features = [
    "tcp",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "tokio",
    "macros",
    "identify",
] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
alloy = { version = "1", features = [
    "provider-http",
    "signer-local",
    "contract",
    "sol-types",
    "network",
] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
# Post-quantum: RC versions — upgrade when stable releases ship (track RustCrypto/signatures)
ml-dsa = "0.1.0-rc.8"       # FIPS 204 (Dilithium) — TODO: upgrade to stable when published
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }  # FIPS 203 — TODO: upgrade to stable
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
futures = "0.3"
igd-next = "0.17"
tun-rs = { version = "2", features = ["async"] }
