[package]
name = "shieldnode-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "shieldnode_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
alloy = { version = "1", default-features = false, features = ["provider-http", "sol-types", "network", "contract", "signer-local", "reqwest-native-tls"] }
url = "2"
