[package]
name = "shieldnode-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "shieldnode_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
alloy = { version = "1", default-features = false, features = ["provider-http", "sol-types", "network", "contract", "signer-local", "reqwest-native-tls"] }
url = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }
hex = "0.4"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# ZK proof generation (Groth16 over BN254)
ark-circom = { version = "0.5" }
ark-groth16 = { version = "0.5", features = ["parallel"] }
ark-bn254 = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
num-bigint = { version = "0.4", features = ["serde"] }

# ZK witness construction (secp256k1 pubkey recovery + Poseidon hashing)
k256 = { version = "0.13", features = ["ecdsa"] }
light-poseidon = "0.4"
